--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.9.0"
   }
 }
