--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "method-override": "^2.3.10",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.13",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
