--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.13.2",
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
@@ -19,6 +20,8 @@
     "method-override": "^2.3.10",
     "moment": "^2.22.2",
     "mongoose": "^5.3.13",
+    "multer": "^1.4.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0"
