--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "cloudinary": "^1.13.2",
     "connect-flash": "^0.1.1",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
@@ -22,6 +23,7 @@
     "mongoose": "^5.3.13",
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
+    "npm": "^6.5.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0"
