preserve line breaks in displaying user input for stories, try to use express sanitizer

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-sanitizer": "^1.0.4",
     "express-session": "^1.15.6",
     "method-override": "^2.3.10",
     "moment": "^2.22.2",
