--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "v1",
   "version": "1.0.0",
-  "description": "YelpCamp v1",
+  "description": "haim-website",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "author": "Colt Steele",
+  "author": "Yael Luria",
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.3",
@@ -27,7 +27,8 @@
     "npm": "^6.5.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^3.1.0"
+    "passport-local-mongoose": "^3.1.0",
+    "connect-wwwhisper": "*"
   },
   "devDependencies": {
     "eslint": "^5.9.0"
