gmail-send config and add to post route of stories.js

--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "body-parser": "^1.18.3",
     "cloudinary": "^1.13.2",
     "connect-flash": "^0.1.1",
+    "connect-wwwhisper": "*",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-sanitizer": "^1.0.4",
     "express-session": "^1.15.6",
+    "gmail-send": "^1.2.14",
     "method-override": "^2.3.10",
     "moment": "^2.22.2",
     "mongoose": "^5.3.13",
@@ -27,8 +29,7 @@
     "npm": "^6.5.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^3.1.0",
-    "connect-wwwhisper": "*"
+    "passport-local-mongoose": "^3.1.0"
   },
   "devDependencies": {
     "eslint": "^5.9.0"
